[package]
name = "amath"
version = "0.1.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vpzomtrrfrt/amath"
description = "lalrpop-based arithmetic parser"

[dependencies]
lazy_static = "1.0.0"
lalrpop-util = "0.15.2"
regex = "1.0.0"

[build-dependencies]
lalrpop = "0.15.2"
